Menu looks ready

--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="lib/style.css">
+    <link rel="stylesheet" href="lib/menu.css">
     <title>King's Science Society</title>
 </head>
 <body>
-    <nav>
-        <h1>The King's Science Society</h1>
-        <ul class="menu">
-            <li>Home</li>
-            <li>Events</li>
-            <li>Member Information</li>
-        </ul>
-    </nav>
-    <div id="mainContainer">
-        <div id="mainImageContainer">
-            <img src="images/dummy.png" alt="main image"/>
-        </div>
-        <div id="infoContainer">
-            <h3>What is King's Science Society?</h3>
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi impedit tenetur sint deserunt reprehenderit in magnam incidunt culpa quisquam accusantium nesciunt quaerat illo dolorum optio, ab pariatur! Eum, ex incidunt.ß Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo sit, a nostrum, odio vitae nobis facere voluptas eveniet perspiciatis eum aspernatur laborum quod veniam soluta suscipit illo nisi ex nulla iste illum? Perspiciatis, tenetur dolore placeat temporibus tempore libero quo rem facilis facere culpa? Animi facere eos, veniam enim voluptates ullam tempora totam, modi nemo dolorem ipsam quibusdam. Atque aspernatur ullam molestias praesentium. Laboriosam id accusamus laudantium veritatis. Consequuntur ducimus deserunt magnam illum placeat, iure aliquam commodi, quis sit itaque iste dolorem ex, minima expedita aut sint enim eos quibusdam error fugit labore rerum? Placeat in dignissimos, nulla eos hic amet accusantium doloremque voluptate at quam, ipsum facere cumque corporis expedita ullam atque reiciendis ratione iusto qui error cupiditate sunt magni eius soluta. Deleniti itaque repellendus nam quisquam nihil, incidunt asperiores nesciunt hic quos cumque, facilis illo odit, similique molestiae. Quidem et libero optio repellat est laborum voluptatem quis rerum, architecto officia perspiciatis, aspernatur, iste odio. Reiciendis, similique dolores? Corrupti maiores possimus modi ducimus, minima, dolorum voluptatibus voluptate ut praesentium, vel inventore enim provident quas. Officia et tenetur veniam soluta dignissimos, ullam ex. Voluptatibus, totam! Eaque facilis aut ea aspernatur perspiciatis temporibus a illum odit reprehenderit recusandae? Natus, laudantium nostrum?
-            </p>
-        </div>
-    </div>
+    <header>
+        <nav class="navBar">
+            <a class="navTitle navLink" href="index.html">Jeffrey Dudiak Ph.D.</a>
+            <ul class="navMenu menuList">
+                <li><a class="navLink" href="index.html">Home</a></li>
+                <li><a class="navLink" href="index.html">Events</a></li>
+                <li><a class="navLink" href="index.html">Members</a></li>
+            </ul>
+            <button class="hamburger">
+                <div class="bar"></div>
+            </button>
+        </nav>
+    </header>
+    <ul class="mobileNavMenu menuList">
+        <li><a class="navLink" href="index.html">Home</a></li>
+        <li><a class="navLink" href="index.html">Events</a></li>
+        <li><a class="navLink" href="index.html">Members</a></li>
+    </ul>
 </body>
+
+<script src="lib/menu.js"></script>
 </html>
