--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="lib/style.css">
     <link rel="stylesheet" href="lib/menu.css">
+    <link rel="stylesheet" href="lib/index.css">
     <title>King's Science Society</title>
 </head>
 <body>
     <header>
         <nav class="navBar">
-            <a class="navTitle navLink" href="index.html">Jeffrey Dudiak Ph.D.</a>
+            <a class="navTitle navLink" href="index.html">KSS</a>
             <ul class="navMenu menuList">
                 <li><a class="navLink" href="index.html">Home</a></li>
                 <li><a class="navLink" href="index.html">Events</a></li>
@@ -26,6 +26,11 @@
         <li><a class="navLink" href="index.html">Events</a></li>
         <li><a class="navLink" href="index.html">Members</a></li>
     </ul>
+    <div class="container">
+        <div class="mainImageContainer">
+            <img src="images/wallpaper.jpeg" alt="mainImage" class="mainImage">
+        </div>
+    </div>
 </body>
 
 <script src="lib/menu.js"></script>
