Add members, events (raw) and update menu for all

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <a class="navTitle navLink" href="index.html">KSS</a>
             <ul class="navMenu menuList">
                 <li><a class="navLink" href="index.html">Home</a></li>
-                <li><a class="navLink" href="index.html">Events</a></li>
-                <li><a class="navLink" href="index.html">Members</a></li>
+                <li><a class="navLink" href="events/events.html">Events</a></li>
+                <li><a class="navLink" href="members/members.html">Members</a></li>
             </ul>
             <button class="hamburger">
                 <div class="bar"></div>
@@ -23,8 +23,8 @@
     </header>
     <ul class="mobileNavMenu menuList">
         <li><a class="navLink" href="index.html">Home</a></li>
-        <li><a class="navLink" href="index.html">Events</a></li>
-        <li><a class="navLink" href="index.html">Members</a></li>
+        <li><a class="navLink" href="events/events.html">Events</a></li>
+        <li><a class="navLink" href="members/members.html">Members</a></li>
     </ul>
     <div class="container">
         <div class="mainImageContainer">
