Event looks good

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
     <div class="container">
         <div class="mainImageContainer">
-            <img src="images/wallpaper.jpeg" alt="mainImage" class="mainImage">
+            
         </div>
 
         <div class="descriptionContainer">
@@ -36,7 +36,7 @@
             <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis recusandae suscipit natus et tempora. Excepturi, deserunt earum doloremque sapiente ab expedita adipisci amet, voluptas error debitis pariatur, at magni quod quisquam veritatis voluptates animi laudantium libero voluptatibus in facilis eius. Porro, maxime exercitationem. Debitis eos molestias, totam dolores minus rerum quod fugit, atque assumenda ab deleniti porro. Amet officiis recusandae totam nostrum sit labore et, voluptatum voluptatem odio iste modi alias pariatur! Nemo quaerat illum nobis suscipit possimus pariatur sint!</p>
         </div>
     </div>
+    <footer class="developerCredit">Website developed by&nbsp;<a href="https://sshrestha.com">Sahil Shrestha</a></footer>
 </body>
-
 <script src="lib/menu.js"></script>
 </html>
