--- a/members/members.html
+++ b/members/members.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navBar">
-            <a class="navTitle navLink" href="index.html">KSS</a>
+            <a class="navTitle navLink" href="../index.html">KSS</a>
             <ul class="navMenu menuList">
                 <li><a class="navLink" href="../index.html">Home</a></li>
                 <li><a class="navLink" href="../events/events.html">Events</a></li>
