--- a/events/events.html
+++ b/events/events.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navBar">
-            <a class="navTitle navLink" href="index.html">KSS</a>
+            <a class="navTitle navLink" href="../index.html">KSS</a>
             <ul class="navMenu menuList">
                 <li><a class="navLink" href="../index.html">Home</a></li>
                 <li><a class="navLink" href="../events/events.html">Events</a></li>
@@ -28,6 +28,12 @@
         <li><a class="navLink" href="../events/events.html">Events</a></li>
         <li><a class="navLink" href="../members/members.html">Members</a></li>
     </ul>
+    <section class="headingSection">
+        <h1>Events</h1>
+    </section>
+    <div class="container">
+
+    </div>
 </body>
 <!-- For Menu -->
 <script src="../lib/menu.js"></script>
