Add Slime event

--- a/events/events.html
+++ b/events/events.html
@@ -29,10 +29,24 @@
         <li><a class="navLink" href="../members/members.html">Members</a></li>
     </ul>
     <section class="headingSection">
-        <h1>Events</h1>
+        <h1 class="heading">Events</h1>
     </section>
     <div class="container">
-
+        <ul class="eventList">
+            <li class="event">
+                <h4 class="eventHeading">Slime Therapy</h4>
+                <div class="eventInfoAndImageContainer">
+                    <div class="eventImageContainer">
+                        <img class="eventImage" src="../images/slime.jpeg"/>
+                    </div>
+                    <div class="eventInfoContainer">
+                        <p>Date: October 25, 2022</p>
+                        <p>Time: 5pm to 7pm</p>
+                        <p>Venue: TBD</p>
+                    </div>
+                </div>
+            </li>
+        </ul>
     </div>
 </body>
 <!-- For Menu -->
