Transport heading to shared resource

--- a/events/events.html
+++ b/events/events.html
@@ -7,6 +7,7 @@
     <title>Events</title>
     <!-- For menu -->
     <link rel="stylesheet" href="../lib/menu.css">
+    <link rel="stylesheet" href="../lib/headingSection.css">
     <link rel="stylesheet" href="lib/events.css">
 </head>
 <body>
