--- a/members/members.html
+++ b/members/members.html
@@ -7,6 +7,7 @@
     <title>Members</title>
     <!-- For menu -->
     <link rel="stylesheet" href="../lib/menu.css">
+    <link rel="stylesheet" href="../lib/headingSection.css">
     <link rel="stylesheet" href="lib/members.css">
 </head>
 <body>
@@ -28,6 +29,23 @@
         <li><a class="navLink" href="../events/events.html">Events</a></li>
         <li><a class="navLink" href="../members/members.html">Members</a></li>
     </ul>
+    <section class="headingSection">
+        <h1 class="heading">Members</h1>
+    </section>
+    <div class="container">
+        <ul class="memberList">
+            <li class="member">
+                <div class="memberImageContainer">
+                    <img class="memberImage" src="../images/team.jpeg"/>
+                </div>
+                <div class="memberDescriptionContainer">
+                    <h4 class="memberName">Member 1</h4>
+                    <h5 class="memberTitle">Member Title</h5>
+                    <p class="memberDescription">Member's description</p>
+                </div>
+            </li>
+        </ul>
+    </div>
 </body>
 <!-- For Menu -->
 <script src="../lib/menu.js"></script>
