--- a/members/members.html
+++ b/members/members.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="../lib/menu.css">
     <link rel="stylesheet" href="../lib/headingSection.css">
     <link rel="stylesheet" href="lib/members.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -34,6 +37,16 @@
     </section>
     <div class="container">
         <ul class="memberList">
+            <li class="member">
+                <div class="memberImageContainer">
+                    <img class="memberImage" src="../images/team.jpeg"/>
+                </div>
+                <div class="memberDescriptionContainer">
+                    <h4 class="memberName">Member 1</h4>
+                    <h5 class="memberTitle">Member Title</h5>
+                    <p class="memberDescription">Member's description</p>
+                </div>
+            </li>
             <li class="member">
                 <div class="memberImageContainer">
                     <img class="memberImage" src="../images/team.jpeg"/>
