--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
     <div class="container">
         <div class="mainImageContainer">
-            
+            <img class="mainImage" src="images/new_wallpaper.png" alt="Background Image">
         </div>
 
         <div class="descriptionContainer">
