--- a/events/events.html
+++ b/events/events.html
@@ -18,6 +18,7 @@
                 <li><a class="navLink" href="../index.html">Home</a></li>
                 <li><a class="navLink" href="../events/events.html">Events</a></li>
                 <li><a class="navLink" href="../members/members.html">Members</a></li>
+                <li><a class="navLink" href="../memories/memories.html">Memories</a></li>
             </ul>
             <button class="hamburger">
                 <div class="bar"></div>
@@ -28,6 +29,7 @@
         <li><a class="navLink" href="../index.html">Home</a></li>
         <li><a class="navLink" href="../events/events.html">Events</a></li>
         <li><a class="navLink" href="../members/members.html">Members</a></li>
+        <li><a class="navLink" href="../memories/memories.html">Memories</a></li>
     </ul>
     <section class="headingSection">
         <h1 class="heading">Events</h1>
