--- a/memories/memories.html
+++ b/memories/memories.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Members</title>
+    <title>Memories</title>
     <!-- For menu -->
     <link rel="stylesheet" href="../lib/menu.css">
     <link rel="stylesheet" href="../lib/headingSection.css">
-    <link rel="stylesheet" href="lib/members.css">
+    <link rel="stylesheet" href="lib/memories.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
@@ -35,31 +35,10 @@
         <li><a class="navLink" href="../memories/memories.html">Memories</a></li>
     </ul>
     <section class="headingSection">
-        <h1 class="heading">Members</h1>
+        <h1 class="heading">Memories</h1>
     </section>
     <div class="container">
-        <ul class="memberList">
-            <li class="member">
-                <div class="memberImageContainer">
-                    <img class="memberImage" src="../images/team.jpeg"/>
-                </div>
-                <div class="memberDescriptionContainer">
-                    <h4 class="memberName">Member 1</h4>
-                    <h5 class="memberTitle">Member Title</h5>
-                    <p class="memberDescription">Member's description</p>
-                </div>
-            </li>
-            <li class="member">
-                <div class="memberImageContainer">
-                    <img class="memberImage" src="../images/team.jpeg"/>
-                </div>
-                <div class="memberDescriptionContainer">
-                    <h4 class="memberName">Member 1</h4>
-                    <h5 class="memberTitle">Member Title</h5>
-                    <p class="memberDescription">Member's description</p>
-                </div>
-            </li>
-        </ul>
+        <h1>Content Coming Soon!</h1>
     </div>
 </body>
 <!-- For Menu -->
