--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a class="navLink" href="index.html">Home</a></li>
                 <li><a class="navLink" href="events/events.html">Events</a></li>
                 <li><a class="navLink" href="members/members.html">Members</a></li>
+                <li><a class="navLink" href="memories/memories.html">Memories</a></li>
             </ul>
             <button class="hamburger">
                 <div class="bar"></div>
@@ -25,6 +26,7 @@
         <li><a class="navLink" href="index.html">Home</a></li>
         <li><a class="navLink" href="events/events.html">Events</a></li>
         <li><a class="navLink" href="members/members.html">Members</a></li>
+        <li><a class="navLink" href="memories/memories.html">Memories</a></li>
     </ul>
     <div class="container">
         <div class="mainImageContainer">
