Add Sahil Information

--- a/members/members.html
+++ b/members/members.html
@@ -41,12 +41,12 @@
         <ul class="memberList">
             <li class="member">
                 <div class="memberImageContainer">
-                    <img class="memberImage" src="../images/team.jpeg"/>
+                    <img class="memberImage" src="../images/sahil.jpeg"/>
                 </div>
                 <div class="memberDescriptionContainer">
-                    <h4 class="memberName">Member 1</h4>
-                    <h5 class="memberTitle">Member Title</h5>
-                    <p class="memberDescription">Member's description</p>
+                    <h4 class="memberName">Sahil Shrestha</h4>
+                    <h5 class="memberTitle">Treasurer</h5>
+                    <p class="memberDescription">Hi, I am a fourth year Computer Science Student at King's University. I love programming, working out, and hiking.</p>
                 </div>
             </li>
             <li class="member">
@@ -54,7 +54,7 @@
                     <img class="memberImage" src="../images/team.jpeg"/>
                 </div>
                 <div class="memberDescriptionContainer">
-                    <h4 class="memberName">Member 1</h4>
+                    <h4 class="memberName">Member 2</h4>
                     <h5 class="memberTitle">Member Title</h5>
                     <p class="memberDescription">Member's description</p>
                 </div>
