--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="descriptionContainer">
             <h3 class="descriptionHeading">What is KSS?</h3>
-            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis recusandae suscipit natus et tempora. Excepturi, deserunt earum doloremque sapiente ab expedita adipisci amet, voluptas error debitis pariatur, at magni quod quisquam veritatis voluptates animi laudantium libero voluptatibus in facilis eius. Porro, maxime exercitationem. Debitis eos molestias, totam dolores minus rerum quod fugit, atque assumenda ab deleniti porro. Amet officiis recusandae totam nostrum sit labore et, voluptatum voluptatem odio iste modi alias pariatur! Nemo quaerat illum nobis suscipit possimus pariatur sint!</p>
+            <p class="description">KSS stands for King's Science Scoiety. It is a club representing the science students in the King's University. We organize various science related events during the school year that helps student connect and innovate.</p>
         </div>
     </div>
     <footer class="developerCredit">Website developed by&nbsp;<a href="https://sshrestha.com">Sahil Shrestha</a></footer>
