Fix variable image for members

--- a/members/members.html
+++ b/members/members.html
@@ -45,18 +45,28 @@
                 </div>
                 <div class="memberDescriptionContainer">
                     <h4 class="memberName">Sahil Shrestha</h4>
-                    <h5 class="memberTitle">Treasurer</h5>
+                    <h5 class="memberTitle">Title: Treasurer</h5>
                     <p class="memberDescription">Hi, I am a fourth year Computer Science Student at King's University. I love programming, working out, and hiking.</p>
                 </div>
             </li>
             <li class="member">
                 <div class="memberImageContainer">
-                    <img class="memberImage" src="../images/team.jpeg"/>
+                    <img class="memberImage" src="../images/no_picture_available.png"/>
                 </div>
                 <div class="memberDescriptionContainer">
-                    <h4 class="memberName">Member 2</h4>
-                    <h5 class="memberTitle">Member Title</h5>
-                    <p class="memberDescription">Member's description</p>
+                    <h4 class="memberName">Natalie Elgersma</h4>
+                    <h5 class="memberTitle">Title: President</h5>
+                    <p class="memberDescription">No description available.</p>
+                </div>
+            </li>
+            <li class="member">
+                <div class="memberImageContainer">
+                    <img class="memberImage" src="../images/no_picture_available.png"/>
+                </div>
+                <div class="memberDescriptionContainer">
+                    <h4 class="memberName">Catherine Leisuk</h4>
+                    <h5 class="memberTitle">President</h5>
+                    <p class="memberDescription">No description available.</p>
                 </div>
             </li>
         </ul>
