Italicize the member description

--- a/members/members.html
+++ b/members/members.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="memberDescriptionContainer">
                     <h4 class="memberName">Catherine Leisuk</h4>
-                    <h5 class="memberTitle">President</h5>
+                    <h5 class="memberTitle">Title: Vice-President</h5>
                     <p class="memberDescription">No description available.</p>
                 </div>
             </li>
