--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="descriptionContainer">
             <h3 class="descriptionHeading">What is KSS?</h3>
-            <p class="description">KSS stands for King's Science Scoiety. It is a club representing the science students in the King's University. We organize various science related events during the school year that helps student connect and innovate.</p>
+            <p class="description">KSS stands for King's Science Society. It is a club representing the science students in the King's University. We organize various science related events during the school year that helps student connect and innovate.</p>
         </div>
     </div>
     <footer class="developerCredit">Website developed by&nbsp;<a href="https://sshrestha.com">Sahil Shrestha</a></footer>
