Change the main wallpaper

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </ul>
     <div class="container">
         <div class="mainImageContainer">
-            <img class="mainImage" src="images/new_wallpaper.png" alt="Background Image">
+            <img class="mainImage" src="images/kss-logo.png" alt="Background Image">
         </div>
 
         <div class="descriptionContainer">
