Update Events for Mutart

--- a/events/events.html
+++ b/events/events.html
@@ -37,6 +37,20 @@
     <div class="container">
         <ul class="eventList">
             <li class="event">
+                <h4 class="eventHeading">Mutart Visit</h4>
+                <div class="eventInfoAndImageContainer">
+                    <div class="eventImageContainer">
+                        <img class="eventImage" src="../images/garden.jpeg"/>
+                    </div>
+                    <div class="eventInfoContainer">
+                        <p><a href="https://my.weezevent.com/stress-re-leaf-at-the-muttart-conservatory">Click to get tickets</a></p>
+                        <p>Date: November 14, 2022</p>
+                        <p>Time: 7pm to 9pm</p>
+                        <p>Venue: Mutart Conservatory and carpool from King's Universtiy</p>
+                    </div>
+                </div>
+            </li>
+            <li class="event">
                 <h4 class="eventHeading">Slime Therapy</h4>
                 <div class="eventInfoAndImageContainer">
                     <div class="eventImageContainer">
@@ -45,10 +59,11 @@
                     <div class="eventInfoContainer">
                         <p>Date: October 25, 2022</p>
                         <p>Time: 5pm to 7pm</p>
-                        <p>Venue: TBD</p>
+                        <p>Venue: King's University</p>
                     </div>
                 </div>
             </li>
+    
         </ul>
     </div>
 </body>
