Design the layout for images

--- a/memories/memories.html
+++ b/memories/memories.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&amp;display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -38,7 +39,26 @@
         <h1 class="heading">Memories</h1>
     </section>
     <div class="container">
-        <h1>Content Coming Soon!</h1>
+        <div class="eventCollectionContainer">
+            <h3 class="eventCollectionHeading">Environment Day</h3>
+            <div class="gridContainer">
+                <div class="eventImageContainer">
+                    <img class="eventImage" src="images/1.jpeg" alt="Memories">
+                </div>
+                <div class="eventImageContainer">
+                    <img class="eventImage" src="images/1.jpeg" alt="Memories">
+                </div>
+                <div class="eventImageContainer">
+                    <img class="eventImage" src="images/1.jpeg" alt="Memories">
+                </div>
+                <div class="eventImageContainer">
+                    <img class="eventImage" src="images/1.jpeg" alt="Memories">
+                </div>
+                <div class="eventImageContainer">
+                    <img class="eventImage" src="images/1.jpeg" alt="Memories">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 <!-- For Menu -->
